--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.1",
@@ -26,12 +28,13 @@
     "lint-staged": "^12.4.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
+    "vite-plugin-eslint": "^1.5.2",
     "vue-tsc": "^0.29.8"
   },
   "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}":[
-        "npm run lint",
-        "git add"
+    "*.{js,jsx,vue,ts,tsx}": [
+      "npm run lint",
+      "git add"
     ]
   }
 }
