feat: mock and generate routes

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
-VITE_API_BASE_URL = https://mock.mengxuegu.com/mock/626e5c531e3d7470073a2574/shop
+# base api
+VITE_API_BASE_URL ='/api/'
+
+# mock api
+VITE_APP_MOCK_API = '/mock-api/'
