--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "^17.0.27",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.19",
     "sass": "^1.51.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
@@ -40,6 +42,7 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
     "vite-plugin-eslint": "^1.5.2",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.29.8"
   },
   "lint-staged": {
