--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
     "typescript": "^4.5.4",
+    "unplugin-vue-define-options": "^0.11.1",
     "vite": "^2.9.2",
     "vite-plugin-eslint": "^1.5.2",
     "vite-plugin-mock": "^2.9.6",
