--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
+    "lodash-es": "^4.17.21",
     "typescript": "^4.5.4",
     "unplugin-vue-define-options": "^0.11.1",
     "vite": "^2.9.2",
