--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "pinia": "^2.0.19",
     "sass": "^1.51.0",
     "vue": "^3.2.25",
+    "vue-draggable-next": "^2.1.1",
+    "vue-draggable-resizable-gorkys": "^2.4.8",
     "vue-router": "^4.0.14",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
