--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "@types/node": "^17.0.27",
+    "@vueuse/core": "^9.5.0",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "mockjs": "^1.1.0",
@@ -44,6 +45,7 @@
     "lint-staged": "^12.4.0",
     "lodash-es": "^4.17.21",
     "typescript": "^4.5.4",
+    "unocss": "^0.46.4",
     "unplugin-vue-define-options": "^0.11.1",
     "vite": "^2.9.2",
     "vite-plugin-eslint": "^1.5.2",
